dig-src/main/default/objects/Geary_Artifact__c/Geary_Artifact__c.object-meta.xml
<CustomObject>
    <label>Geary Artifact</label>
    <pluralLabel>Geary Artifacts</pluralLabel>
    <nameField>
        <label>Geary Artifact Number</label>
        <type>AutoNumber</type>
        <displayFormat>GA-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores Geary bundle artifacts and pointers.</description>
</CustomObject>