dig-src/main/default/objects/Geary_Artifact__c/fields/Bytes__c.field-meta.xml
<CustomField>
    <fullName>Bytes__c</fullName>
    <label>Bytes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>