dig-src/main/default/objects/Geary_Artifact__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <type>Text</type>
    <length>128</length>
</CustomField>