dig-src/main/default/objects/Geary_Artifact__c/fields/Path_Or_Url__c.field-meta.xml
<CustomField>
    <fullName>Path_Or_Url__c</fullName>
    <label>Path or URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>