dig-src/main/default/objects/Geary_Artifact__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Geary Run</label>
    <type>Lookup</type>
    <referenceTo>Geary_Run__c</referenceTo>
    <relationshipName>Artifacts</relationshipName>
    <relationshipLabel>Geary Artifacts</relationshipLabel>
</CustomField>