dig-src/main/default/objects/Geary_Artifact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Artifact Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>